--- a/src/assets/components/sectionfive/five.css
+++ b/src/assets/components/sectionfive/five.css
@@ -48,21 +48,20 @@
   margin-top: 5px;
 }
 
-.OrganizingCartBottom {
-    display: flex;
-    flex-direction: column;
-    gap: 40px;
-    width: 85%;
-    max-width: 1200px;
-    margin: 0 auto;
-}
-
 .cartboxcommon {
     display: flex;
     gap: 30px;
     flex-wrap: wrap;
     justify-content: center;
-    width: 100%;
+    width: 90%;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.OrganizingCartBottom {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .Cartposter {
